# installFonts-list-gen

./: .gitignore  README.md  flake.nix  pyproject.toml
src/installFonts_gen_list/: __init__.py
