[project]
name = "installFonts-gen-list"
version = "0.1.0"
description = "A List Generator for installFonts tracking issue"
requires-python = ">=3.12"
dependencies = [
 "requests>=2.33.0",
]

[project.scripts]
installfonts-gen-list = "installFonts_gen_list:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
